fixes icon spacing for select component

--- a/source/scss/components/_select.scss
+++ b/source/scss/components/_select.scss
@@ -12,6 +12,7 @@
     i {
       font-size: 22px;
       margin-right: 15px;
+      margin-top: 4px;
     }
   }
 
